--- a/css/custom.css
+++ b/css/custom.css
@@ -2,6 +2,10 @@
     max-width: 500px;
 }
 
+.overflow-hidden {
+    overflow: hidden;
+}
+
 /*
  * Custom translucent site header
  */
@@ -27,6 +31,7 @@
     flex: 1;
 }
 
+/*body spaced blocks*/
 @media (min-width: 768px) {
     .flex-md-equal > * {
         -ms-flex: 1;
@@ -34,6 +39,19 @@
     }
 }
 
+@media only screen and (max-width: 768px) {
+    #displaydesktop {
+        display: none;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    #displaymobile {
+        display: none;
+    }
+}
+
+/*picture formatting - should condense at some point*/
 .imagediv {
     padding: 0;
     background-color: black;
@@ -94,6 +112,8 @@
     padding-bottom: 20px;
 }
 
+
+/*font awesome social media icons*/
 .fa {
     padding:5px;
 }
@@ -111,6 +131,3 @@
     color: grey;
 }
 
-.overflow-hidden {
-    overflow: hidden;
-}
